--- a/JonahsWhale/Base.lproj/Main.storyboard
+++ b/JonahsWhale/Base.lproj/Main.storyboard
@@ -82,16 +82,6 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="40" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="5eN-jF-M7q">
                                 <rect key="frame" x="20" y="64" width="560" height="502"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="allProjectsCell" rowHeight="40" id="JZq-mH-YUH">
-                                        <rect key="frame" x="0.0" y="92" width="560" height="40"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="JZq-mH-YUH" id="xaR-9X-Sny">
-                                            <rect key="frame" x="0.0" y="0.0" width="560" height="39"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -197,6 +187,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="eEs-pj-KxL"/>
+        <segue reference="Qi1-HA-Vx0"/>
     </inferredMetricsTieBreakers>
 </document>
