--- a/JonahsWhale/AllProjectsViewCell.xib
+++ b/JonahsWhale/AllProjectsViewCell.xib
@@ -14,16 +14,20 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="76"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="project name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZGk-dB-Nu4">
-                        <rect key="frame" x="47" y="23" width="101" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="project name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZGk-dB-Nu4">
+                        <rect key="frame" x="40" y="27" width="101" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Gah-7u-n5y">
-                        <rect key="frame" x="240" y="18" width="51" height="31"/>
+                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Gah-7u-n5y">
+                        <rect key="frame" x="235" y="22" width="51" height="31"/>
                     </switch>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="ZGk-dB-Nu4" firstAttribute="centerY" secondItem="ecg-Qj-OvP" secondAttribute="centerY" id="M35-ub-yMo"/>
+                    <constraint firstItem="Gah-7u-n5y" firstAttribute="centerY" secondItem="ecg-Qj-OvP" secondAttribute="centerY" id="wsp-sp-YGE"/>
+                </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="monitoredSwitch" destination="Gah-7u-n5y" id="K22-1z-a4f"/>
