--- a/JonahsWhale/Base.lproj/Main.storyboard
+++ b/JonahsWhale/Base.lproj/Main.storyboard
@@ -76,11 +76,11 @@
                         <viewControllerLayoutGuide type="bottom" id="7nO-D1-hBw"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="nVE-Tf-sQI">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="40" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="5eN-jF-M7q">
-                                <rect key="frame" x="20" y="64" width="560" height="502"/>
+                                <rect key="frame" x="20" y="0.0" width="560" height="502"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
                         </subviews>
@@ -92,6 +92,7 @@
                             <constraint firstItem="5eN-jF-M7q" firstAttribute="leading" secondItem="nVE-Tf-sQI" secondAttribute="leadingMargin" id="vT4-45-sap"/>
                         </constraints>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout"/>
                     <connections>
                         <outlet property="allProjectsTable" destination="5eN-jF-M7q" id="kYM-4A-rKn"/>
                         <segue destination="Vsq-xi-pBy" kind="show" id="Qi1-HA-Vx0"/>
